# Mask_RCNN

./: .gitignore  README.md  datasets.py  grabcut.py  inf.py  inference.py  main.py  pyproject.toml  requirements.txt  trainer.py  utils.py
data/test/: _annotations.coco.json
data/train/: _annotations.coco.json
data/valid/: _annotations.coco.json
dataset1/test/: _annotations.coco.json
dataset1/train/: _annotations.coco.json
dataset1/valid/: _annotations.coco.json
src/: __init__.py  datasets.py  grabcut.py  inference.py  main.py  trainer.py  utils.py
